--- a/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Bundle.properties
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Bundle.properties
@@ -3,3 +3,4 @@
 # Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
 
 
+Clientes1.rSTextFieldMaterialIcon1.placeholder=ola mundo
