--- a/Documents/NetBeansProjects/carpinteriaproyecto/pom.xml
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/pom.xml
@@ -42,6 +42,12 @@
             <version>2.1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
