--- a/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Bundle.properties
+++ b/Documents/NetBeansProjects/carpinteriaproyecto/src/main/java/vista/Bundle.properties
@@ -1,6 +1,7 @@
 
-# Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-# Click nbfs://nbhost/SystemFileSystem/Templates/Other/properties.properties to edit this template
-
-
-Clientes1.rSTextFieldMaterialIcon1.placeholder=ola mundo
+Clientes1.txtBuscar.placeholder=Buscar...
+Clientes1.btnNuevo.text=Anterior
+Clientes1.btnNuevo1.text=\ Nuevo
+Clientes1.btnNuevo2.text=Anterior
+Clientes1.btnNuevo3.text=\ Nuevo
+Clientes1.btnNuevo4.text=\ Nuevo
